[project]
name = "keiba-v2"
version = "4.0.0"
description = "KeibaCICD v4 - JRA-VAN Native Architecture"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv==1.0.0",
    "pandas==3.0.0",
    "numpy==2.4.2",
    "lightgbm==4.6.0",
    "scikit-learn==1.8.0",
    "optuna==4.7.0",
    "beautifulsoup4==4.12.2",
    "requests==2.31.0",
    "scipy==1.17.0",
    "matplotlib==3.10.8",
    "pyyaml==6.0.3",
    "mysql-connector-python==9.6.0",
    "shap==0.50.0",
    "lhafile==0.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
]

[tool.setuptools.packages.find]
include = ["ml*", "core*", "jrdb*", "analysis*", "builders*", "keibabook*"]
exclude = ["web*", "tests*", "test_*", ".venv*"]

[tool.ruff]
line-length = 100
